# slim_profiler

./: .gitignore  Makefile  Readme.md  fmt.sh  pixi.toml  pyproject.toml
src/slim_profiler/: gpu_stress.py  plot.py  profiler.py
